@startuml
hide circle
left to right direction 
class Joueur {
    id : text {key}
    nom : string
    prenom : string
}
class Partie{
  joueur1 : string
  joueur2 : string
  nb_sets : integer
}
Joueur "1"--"*" Partie: jouer
Joueur "1"--"*" Set : jouer
class Set {

}
Set "*" --"*" Partie :apartenir
@enduml